# myComputer

./: CMakeLists.txt  computer.c  computer.h  main.c
bigchar/include/: mc_bigchar.h
bigchar/src/: mc_bigchar.c
console/include/: mc_console.h
console/src/: mc_console.c
include/: computer.h  mc_assembly.h  mc_computer.h
readkey/include/: mc_readkey.h
readkey/src/: mc_readkey.c
src/: computer.c  mc_computer.c
terminal/include/: mc_colors.h  mc_terminal.h  mc_window.h
terminal/src/: mc_terminal.c  mc_window.c
